rrdtooldir = $(prefix)/share/@PACKAGE@/rrdtool
dist_rrdtool_SCRIPTS = update-all.sh \
                       create-BT-db.sh update-BT.sh \
                       create-TWT-db.sh update-TWT.sh \
                       create-OT-db.sh update-OT.sh \
                       create-burner-db.sh update-burner.sh \
                       create-status-db.sh update-status.sh \
                       create-pump-db.sh update-pump.sh
