bin_PROGRAMS = elcobusd

elcobusd_SOURCES = elcobusd.cpp \
                  ElcobusMessage/ElcobusMessage.hpp ElcobusMessage/ElcobusMessage.cpp \
                  ElcobusMessage/Unknown.hpp ElcobusMessage/Unknown.cpp \
                  ElcobusMessage/Registrar.hpp ElcobusMessage/Registrar.cpp \
                  utils/output.hpp utils/output.cpp \
                  utils/TimestampLog.hpp utils/TimestampLog.cpp \
                  utils/Registrar.t \
                  SockAddr.hpp SockAddr.cpp \
                  Socket.hpp Socket.cpp
